# xmf

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CONVENTIONS.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: linux.yml  publish.yml  windows.yml
docs/: example_config.yaml
src/: cache.rs  change.rs  config.rs  currency_provider.rs  lib.rs  log.rs  main.rs  price_provider.rs  return.rs  returns.rs  summary.rs  ui.rs
src/cli/: alloc.rs  change.rs  fees.rs  mod.rs  returns.rs  setup.rs  summary.rs  ui.rs
src/core/: allocation.rs  analytics.rs  cache.rs  config.rs  currency.rs  log.rs  metadata.rs  mod.rs  price.rs
src/providers/: amfi_provider.rs  caching.rs  kuvera_provider.rs  mod.rs  util.rs  yahoo_finance.rs
src/store/: disk.rs  fjallcache.rs  memory.rs  mod.rs  sledkv.rs
tests/: app_integration.rs
