[package]
name = "xmf"
version = "0.2.0"
edition = "2024"
description = "A CLI app to track finance portfolios"
license = "MIT"
repository = "https://github.com/codito/xmf"
homepage = "https://github.com/codito/xmf"
documentation = "https://github.com/codito/xmf"
readme = "README.md"
categories = ["command-line-utilities", "finance"]
keywords = ["finance", "portfolio", "tracker", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
directories = "6.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
rust_finprim = "0.4.0"
rust_decimal = "1"                                                  # Needed for rust_finprim::rate::cagr
comfy-table = "7.1.4"
console = "0.16.0"
indicatif = "0.17.12"
chrono = { version = "0.4.41", features = ["serde"] }
fjall = "2.11.2"

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
test-log = { version = "0.2", features = ["trace"] }
